# GoodNews

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
res/: res.rc
src/: gui.cpp  main.cpp  rss.cpp
src/include/: gui.hpp  logger.hpp  rss.hpp
